# better-auth-rs

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml  lefthook.yml  rust-toolchain.toml
.claude/: settings.json
.claude/commands/: port-batch.md  sync-upstream.md
.claude/hooks/: post-edit-fmt.js  pre-bash-guard.js
.claude/phases/: README.md  phase-0-scaffolding.md  phase-1-core-model-adapters.md  phase-2-crypto-cookies-context.md  phase-3-core-api.md  phase-4-axum-integration.md  phase-5-oauth-social.md  phase-6-plugins.md  phase-7-hardening-parity.md  phase-sync-upstream.md
.claude/skills/axum-integration/: SKILL.md
.claude/skills/db-adapter-conformance/: SKILL.md
.claude/skills/porting-ts-to-rust/: SKILL.md
.claude/skills/syncing-upstream/: SKILL.md
.claude/skills/writing-parity-tests/: SKILL.md
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  semantic-pull-request.yml  upstream-sync.yml
crates/better-auth-rs/: Cargo.toml
crates/better-auth-rs-api-key/: Cargo.toml  UPSTREAM
crates/better-auth-rs-api-key/src/: lib.rs
crates/better-auth-rs-cli/: Cargo.toml  UPSTREAM
crates/better-auth-rs-cli/src/: lib.rs
crates/better-auth-rs-core/: Cargo.toml
crates/better-auth-rs-core/src/: CLAUDE.md  lib.rs  secret.rs
crates/better-auth-rs-core/src/api/: mod.rs
crates/better-auth-rs-core/src/db/: field.rs  mod.rs  plugin.rs  types.rs  types.test.rs
crates/better-auth-rs-core/src/db/adapter/: get_default_field_name.rs  get_default_model_name.rs  get_default_model_name.test.rs  get_field_name.rs  get_model_name.rs  mod.rs  mod.test.rs  utils.rs  utils.test.rs
crates/better-auth-rs-core/src/db/schema/: account.rs  account.test.rs  mod.rs  rate_limit.rs  rate_limit.test.rs  session.rs  session.test.rs  shared.rs  user.rs  user.test.rs  verification.rs  verification.test.rs
crates/better-auth-rs-core/src/env/: logger.rs  logger.test.rs  mod.rs
crates/better-auth-rs-core/src/error/: codes.rs  mod.rs
crates/better-auth-rs-core/src/oauth2/: mod.rs  oauth_provider.rs  oauth_provider.test.rs
crates/better-auth-rs-core/src/types/: context.rs  context.test.rs  cookie.rs  helper.rs  init_options.rs  init_options.test.rs  mod.rs  plugin.rs  plugin.test.rs  secret.rs
crates/better-auth-rs-core/src/utils/: error_codes.rs  id.rs  id.test.rs  mod.rs
crates/better-auth-rs-memory-adapter/: Cargo.toml  UPSTREAM
crates/better-auth-rs-memory-adapter/src/: lib.rs
crates/better-auth-rs-oauth-provider/: Cargo.toml  UPSTREAM
crates/better-auth-rs-oauth-provider/src/: lib.rs
crates/better-auth-rs-passkey/: Cargo.toml  UPSTREAM
crates/better-auth-rs-passkey/src/: lib.rs
crates/better-auth-rs-redis-storage/: Cargo.toml  UPSTREAM
crates/better-auth-rs-redis-storage/src/: lib.rs
crates/better-auth-rs-scim/: Cargo.toml  UPSTREAM
crates/better-auth-rs-scim/src/: lib.rs
crates/better-auth-rs-sqlx-adapter/: Cargo.toml  UPSTREAM
crates/better-auth-rs-sqlx-adapter/src/: lib.rs
crates/better-auth-rs-sso/: Cargo.toml  UPSTREAM
crates/better-auth-rs-sso/src/: lib.rs
crates/better-auth-rs-stripe/: Cargo.toml  UPSTREAM
crates/better-auth-rs-stripe/src/: lib.rs
crates/better-auth-rs-telemetry/: Cargo.toml  UPSTREAM
crates/better-auth-rs-telemetry/src/: lib.rs
crates/better-auth-rs-test-utils/: Cargo.toml  UPSTREAM
crates/better-auth-rs-test-utils/src/: lib.rs
crates/better-auth-rs-utils/: Cargo.toml  UPSTREAM
crates/better-auth-rs-utils/src/: base32.rs  base32.test.rs  base32.ts  base64.rs  base64.test.rs  base64.ts  binary.rs  binary.test.rs  ecdsa.rs  ecdsa.test.rs  hash.rs  hash.test.rs  hash.test.ts  hex.rs  hex.test.rs  hex.test.ts  hex.ts  hmac.rs  hmac.test.rs  hmac.test.ts  lib.rs  otp.rs  otp.test.rs  otp.test.ts  otp.ts  password.node.test.ts  password.node.ts  password.rs  password.test.rs  password.test.ts  password.ts  password_node.rs  password_node.test.rs  random.rs  random.test.rs  rng.rs  rsa.rs  rsa.test.rs  type.ts  types.rs
crates/better-auth-rs/examples/: axum_server.rs
crates/better-auth-rs/src/: CLAUDE.md  lib.rs
crates/better-auth-rs/src/adapters/: conformance.rs  memory.rs  mod.rs  sqlx_postgres.rs
crates/better-auth-rs/src/crypto/: buffer.rs  jwt.rs  mod.rs  password.rs  random.rs
crates/better-auth-rs/src/db/: internal_adapter.rs  mapping.rs  mod.rs
docs/content/docs/adapters/: postgresql.mdx
port/: SYNC_v1.6.23.md  UPSTREAM_PORTED  manifest.tsv
reference/: README.md
xtask/: Cargo.toml
xtask/src/: main.rs
