[workspace]
resolver = "3"
members = ["crates/better-auth-rs-core", "crates/better-auth-rs", "xtask"]

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/rubentalstra/better-auth-rs"
authors = ["Ruben Talstra <me@rubentalstra.nl>"]
description = "A faithful Rust port of better-auth — the comprehensive, framework-agnostic auth framework."
keywords = ["authentication", "auth", "oauth", "session", "axum"]
categories = ["authentication", "web-programming"]

# ---------------------------------------------------------------------------
# Shared, version-pinned dependency set (verified on crates.io 2026-06-29).
# Member crates opt in per-phase via `dep = { workspace = true }`.
# An entry here is NOT downloaded until a member actually depends on it.
# Two deliberate pre-release pins (see plan): argon2 0.6.0-rc.8, sea-query-binder 0.8.0-rc.7.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# internal
better-auth-rs-core = { path = "crates/better-auth-rs-core", version = "0.0.0" }

# web / async
http = "1.4.2"
http-body-util = "0.1.3"
tower = "0.5.3"
tower-http = "0.7.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1.89"

# database
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "tls-rustls"] }
sea-query = "1.0.1"
sea-query-binder = "=0.8.0-rc.7"

# crypto / hashing
scrypt = "0.12.0"
argon2 = "=0.6.0-rc.8"
bcrypt = "0.19.2"
password-hash = "0.6.1"
hmac = "0.13.0"
sha2 = "0.11.0"
rand = "0.10.1"
getrandom = "0.4.3"
subtle = "2.6.1"
base64 = "0.22.1"
hex = "0.4.3"
zeroize = "1.9.0"
chacha20poly1305 = "0.11.0"
aes-gcm = "0.11.0"

# jwt / oauth
jsonwebtoken = "10.4.0"
jose-jwk = "0.1.2"
openidconnect = "4.0.1"

# validation / serde
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
garde = { version = "0.23.0", features = ["derive"] }

# http client / cookies / url / time / ids
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls-tls"] }
cookie = { version = "0.18.1", features = ["percent-encode", "signed", "private"] }
url = "2.5.8"
time = { version = "0.3.51", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v4", "v7", "serde"] }

# errors / tracing / email / rate-limit / cache / config
thiserror = "2.0.18"
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
lettre = { version = "0.11.22", default-features = false, features = ["tokio1-rustls", "builder", "smtp-transport"] }
governor = "0.10.4"
moka = { version = "0.12.15", features = ["future"] }
redis = { version = "1.3.0", features = ["tokio-comp"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env", "toml"] }
secrecy = "0.10.3"

# deferred (post-v1)
webauthn-rs = "0.5.5"

# Shared lints applied across every member crate via `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Security-critical codebase: keep these strict but not noisy.
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"

[profile.dev]
# faster incremental builds across the big workspace
debug = "line-tables-only"
