[package]
name = "better-auth-rs-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Framework-agnostic primitives for better-auth-rs (port of @better-auth/core): data model, OAuth2, social providers, error codes, plugin/context types."
# Co-located upstream .ts references are read-only porting aids — never publish them.
exclude = ["**/*.ts"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
# Neutral, framework-agnostic type crates (not web frameworks / DB drivers): the standard HTTP and
# cookie vocabulary, modeled on rather than hand-rolled. See src/CLAUDE.md.
http = { workspace = true }
cookie = { workspace = true }

[dev-dependencies]
# Test-only async runtime for exercising async traits (e.g. SecondaryStorage). Not shipped.
tokio = { workspace = true }
