[package]
name = "better-auth-rs-test-utils"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Backend-agnostic DatabaseAdapter conformance battery for better-auth-rs (port of @better-auth/test-utils)."
exclude = ["**/*.ts"]

[lints]
workspace = true

[dependencies]
better-auth-rs-core = { workspace = true }
