[package]
name = "better-auth-rs-utils"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Low-level crypto/encoding utilities for better-auth-rs (port of @better-auth/utils): random, hash, password (scrypt), base64, hex, binary."
# Co-located upstream .ts references are read-only porting aids — never published.
exclude = ["**/*.ts"]

[lints]
workspace = true

[dependencies]
sha2 = { workspace = true }
scrypt = { workspace = true }
getrandom = { workspace = true }
subtle = { workspace = true }
unicode-normalization = { workspace = true }
thiserror = { workspace = true }
