[package]
name = "better-auth-rs"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A faithful Rust port of better-auth — comprehensive, framework-agnostic authentication. axum + PostgreSQL (SQLx) behind feature flags."
readme = "../../README.md"
# Co-located upstream .ts references are read-only porting aids — never publish them,
# nor the porting tooling/reference dirs.
exclude = ["**/*.ts", "/reference", "/port", "/.claude", "/tests/differential"]

[lints]
workspace = true

[dependencies]
better-auth-rs-core = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
# Optional, wired by the features below.
uuid = { workspace = true, optional = true }
# SQLx adapter: build dynamic SQL with sqlx's own QueryBuilder (stable, sqlx-0.9-only).
# `json`/`time`/`uuid` add the column-type support the adapter needs on top of the
# workspace's runtime-tokio/postgres/tls-rustls features.
sqlx = { workspace = true, optional = true, features = ["json", "time", "uuid"] }
time = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
# Default: the v1 transport + storage the project targets first.
default = ["axum", "sqlx-postgres"]

# --- transport / storage (Rust-ecosystem names; wired in their phase) ---
axum = []                # Phase 4 -> [dep:axum, dep:tower, dep:tower-http]
sqlx-postgres = ["dep:sqlx", "dep:uuid", "dep:time"]  # PostgreSQL via SQLx (dynamic QueryBuilder)
memory-adapter = ["dep:uuid"]  # in-memory adapter for tests/dev (upstream package name)

# --- plugin features: names are EXACTLY better-auth's plugin names (kebab-case) ---
# v1-implemented (Phase 6):
access = []
organization = []
admin = []
two-factor = []
magic-link = []
email-otp = []
phone-number = []
bearer = []
api-key = []
jwt = []                 # -> [dep:jsonwebtoken, dep:jose-jwk]
oidc-provider = ["jwt"]  # -> + [dep:openidconnect]

# Convenience: every implemented feature (standard Cargo convention).
full = [
    "axum", "sqlx-postgres", "memory-adapter",
    "access", "organization", "admin",
    "two-factor", "magic-link", "email-otp", "phone-number",
    "bearer", "api-key", "jwt", "oidc-provider",
]

# Declared post-v1 with the same upstream names (never renamed): anonymous, username,
# generic-oauth, multi-session, captcha, haveibeenpwned, device-authorization, one-tap,
# one-time-token, open-api, custom-session, additional-fields, last-login-method, mcp,
# oauth-proxy, oauth-popup, passkey, siwe, sso, scim, stripe, oauth-provider.
